Ensure tabs stick when response overflows
|  tab 1 |   tab 2   |
---------------------
                     ^
                     |
                     |
                     v

--- a/app/components/ResponseViewer.module.scss
+++ b/app/components/ResponseViewer.module.scss
@@ -1,14 +1,24 @@
 @import '../styles/variables';
 
+.tabs {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
 .response {
   margin-top: $default-padding/2;
   border-top: 1px solid $border-color;
   overflow-y: scroll;
   flex: 2;
+  display: flex;
 
   [role=tabpanel] {
     -webkit-user-select: text;
     user-select: text;
+
+    flex: 1;
+    overflow: scroll;
   }
 
   pre {
